; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs3xdr.c_encode_uint32.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs3xdr.c_encode_uint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, i32)* @encode_uint32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_uint32(%struct.xdr_stream* %0, i32 %1) #0 {
  %3 = alloca %struct.xdr_stream*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.xdr_stream*, %struct.xdr_stream** %3, align 8
  %7 = call i32* @xdr_reserve_space(%struct.xdr_stream* %6, i32 4)
  store i32* %7, i32** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @cpu_to_be32(i32 %8)
  %10 = load i32*, i32** %5, align 8
  store i32 %9, i32* %10, align 4
  ret void
}

declare dso_local i32* @xdr_reserve_space(%struct.xdr_stream*, i32) #1

declare dso_local i32 @cpu_to_be32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
